--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arial&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif; /* Cambiar la fuente a Arial */
+            font-family: 'Arial', sans-serif; /* Cambiado a Arial */
             background-color: #1e1e1e; /* Fondo oscuro */
             color: #fff; /* Texto claro */
             margin: 0;
@@ -80,37 +80,24 @@
             margin-top: 40px;
         }
 
-        /* Estilo para los botones de sección */
-        .section-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 20px 0;
-        }
-
-        /* Estilo para la imagen del ítem */
-        .item-image {
-            max-width: 100px;
-            margin: 10px 0;
-        }
-
         /* Estilo para el inventario simulado */
         #inventory {
-            display: none; /* Ocultar inicialmente */
+            display: none;
             margin-top: 20px;
         }
 
         .slots {
             display: flex;
-            flex-wrap: wrap;
-            margin: 10px 0;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 20px;
         }
 
         .slot {
             width: 50px; /* Ancho de cada slot */
             height: 50px; /* Alto de cada slot */
             margin: 5px;
-            background-color: #555; /* Fondo de los slots */
+            background-color: #FF4500; /* Fondo naranja para los slots */
             border: 2px solid #FF4500; /* Borde de los slots */
             border-radius: 5px;
             position: relative; /* Posición relativa para los elementos internos */
@@ -187,7 +174,7 @@
         <option value="elitekit14">elitekit14</option>
         <option value="elitekit15">elitekit15</option>
         <option value="elitekit16">elitekit16</option>
-        option value="elitekit17">elitekit17</option>
+        <option value="elitekit17">elitekit17</option>
         <option value="elitekit18">elitekit18</option>
         <option value="elitekit19">elitekit19</option>
         <option value="elitekit20">elitekit20</option>
@@ -209,20 +196,48 @@
     
     <div id="kit_list"></div>
     <div id="command_list"></div>
-
+    
     <div id="inventory">
         <h3>Simulated Inventory</h3>
         <div class="slots">
             <h4>Wear:</h4>
-            <div id="wear_slots" class="slots"></div>
-        </div>
-        <div class="slots">
+            <div id="wear_slots" class="slots">
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+            </div>
             <h4>Main:</h4>
-            <div id="main_slots" class="slots"></div>
-        </div>
-        <div class="slots">
+            <div id="main_slots" class="slots">
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+            </div>
             <h4>Belt:</h4>
-            <div id="belt_slots" class="slots"></div>
+            <div id="belt_slots" class="slots">
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+                <div class="slot"></div>
+            </div>
         </div>
         <button onclick="hideInventory()">Hide Inventory</button>
     </div>
@@ -376,6 +391,12 @@
             }
         }
 
+        // Función para ocultar el inventario
+        function hideInventory() {
+            const inventory = document.getElementById('inventory');
+            inventory.style.display = 'none'; // Ocultar el inventario
+        }
+
         // Función para ocultar la lista
         function toggleKitList() {
             toggleKits(); // Mostrar solo la lista de nombres
@@ -386,12 +407,12 @@
             const kit = predefinedKits.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
+                tempInput.value = kit.commands.join('<br>'); // Asegúrate de que esté separado por líneas
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: \n' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Mensaje de confirmación
+                alert('Commands copied: \n' + kit.commands.join('<br>')); // Mensaje de confirmación
             }
         }
 
@@ -450,7 +471,7 @@
                 kitItem.innerHTML = `
                     <strong>${kit.name}</strong>
                     <div>
-                        ${kit.commands.join('<br>').replace(/Kit add/g, 'Kit add<br>')}
+                        ${kit.commands.join('<br>')}
                     </div>
                     <div class="kit-actions">
                         <button onclick="copyCommands('${kit.name}')">Copy</button>
@@ -468,12 +489,12 @@
             const kit = commands.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n'); // Asegurarse de que esté separado por líneas
+                tempInput.value = kit.commands.join('<br>'); // Usar <br> para copiar bien
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n').replace(/Kit add/g, 'Kit add\n')); // Espacios en el mensaje de alerta
+                alert('Commands copied: ' + kit.commands.join('\n')); // Mensajes
             }
         }
 
@@ -498,10 +519,6 @@
                     displayCommands();
                 }
             }
-        }
-
-        function hideInventory() {
-            document.getElementById('inventory').style.display = 'none'; // Ocultar inventario
         }
 
         window.onload = function() {
@@ -533,4 +550,3 @@
     </footer>
 </body>
 </html>
-
