--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Arial&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Arial', sans-serif; /* Cambiado a Arial */
+            font-family: 'Arial', sans-serif; /* Nueva fuente */
             background-color: #1e1e1e; /* Fondo oscuro */
             color: #fff; /* Texto claro */
             margin: 0;
@@ -80,24 +80,38 @@
             margin-top: 40px;
         }
 
+        /* Estilo para los botones de sección */
+        .section-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
         /* Estilo para el inventario simulado */
         #inventory {
-            display: none;
+            display: none; /* Oculto por defecto */
+            flex-direction: column;
+            align-items: center;
             margin-top: 20px;
+            border: 2px solid #FF4500; /* Borde del inventario */
+            border-radius: 10px;
+            padding: 10px;
         }
 
         .slots {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 20px;
+            flex-wrap: wrap;
+            justify-content: center;
+            width: 400px; /* Ajustar el ancho según sea necesario */
+            margin-bottom: 10px;
         }
 
         .slot {
             width: 50px; /* Ancho de cada slot */
             height: 50px; /* Alto de cada slot */
             margin: 5px;
-            background-color: #FF4500; /* Fondo naranja para los slots */
+            background-color: #FF4500; /* Fondo de los slots */
             border: 2px solid #FF4500; /* Borde de los slots */
             border-radius: 5px;
             position: relative; /* Posición relativa para los elementos internos */
@@ -118,6 +132,7 @@
             border-radius: 3px; /* Bordes redondeados */
             padding: 2px; /* Espaciado interno */
         }
+
     </style>
 </head>
 <body>
@@ -201,43 +216,15 @@
         <h3>Simulated Inventory</h3>
         <div class="slots">
             <h4>Wear:</h4>
-            <div id="wear_slots" class="slots">
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-            </div>
+            <div id="wear_slots" class="slots"></div>
+        </div>
+        <div class="slots">
             <h4>Main:</h4>
-            <div id="main_slots" class="slots">
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-            </div>
+            <div id="main_slots" class="slots"></div>
+        </div>
+        <div class="slots">
             <h4>Belt:</h4>
-            <div id="belt_slots" class="slots">
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-                <div class="slot"></div>
-            </div>
+            <div id="belt_slots" class="slots"></div>
         </div>
         <button onclick="hideInventory()">Hide Inventory</button>
     </div>
@@ -356,7 +343,7 @@
             beltSlots.innerHTML = '';
 
             // Mostrar el inventario
-            inventory.style.display = 'block';
+            inventory.style.display = 'flex';
 
             // Procesar los comandos para mostrar en los slots
             if (kit) {
@@ -391,15 +378,11 @@
             }
         }
 
-        // Función para ocultar el inventario
+        // Función para ocultar la lista
         function hideInventory() {
             const inventory = document.getElementById('inventory');
             inventory.style.display = 'none'; // Ocultar el inventario
-        }
-
-        // Función para ocultar la lista
-        function toggleKitList() {
-            toggleKits(); // Mostrar solo la lista de nombres
+            // Aquí podrías también refrescar la vista si es necesario
         }
 
         // Función para copiar el comando
@@ -407,12 +390,12 @@
             const kit = predefinedKits.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('<br>'); // Asegúrate de que esté separado por líneas
+                tempInput.value = kit.commands.join('<br>'); // Asegurarse de que esté separado por líneas
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: \n' + kit.commands.join('<br>')); // Mensaje de confirmación
+                alert('Commands copied: \n' + kit.commands.join('\n')); // Mensaje de confirmación
             }
         }
 
@@ -489,12 +472,12 @@
             const kit = commands.find(k => k.name === kitName);
             if (kit) {
                 const tempInput = document.createElement('input');
-                tempInput.value = kit.commands.join('<br>'); // Usar <br> para copiar bien
+                tempInput.value = kit.commands.join('<br>');
                 document.body.appendChild(tempInput);
                 tempInput.select();
                 document.execCommand('copy');
                 document.body.removeChild(tempInput);
-                alert('Commands copied: ' + kit.commands.join('\n')); // Mensajes
+                alert('Commands copied: ' + kit.commands.join('\n')); // Espacios en el mensaje de alerta
             }
         }
 
