--- a/Index.html
+++ b/Index.html
@@ -20,15 +20,14 @@
             text-shadow: 2px 2px 4px #000;
         }
 
-        label {
+        label, select, input {
             display: block;
-            margin: 10px 0 5px;
+            margin: 10px 0;
         }
 
         input, select, button {
             width: 100%;
             padding: 10px;
-            margin: 5px 0 10px;
             border: none;
             border-radius: 5px;
             background-color: #333;
@@ -38,7 +37,6 @@
 
         button {
             background-color: #FF4500;
-            color: white;
             cursor: pointer;
         }
 
@@ -46,83 +44,84 @@
             background-color: #E53E00;
         }
 
-        #command_list, #kit_list {
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #292929;
-            border: 2px solid #FF4500;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
-        }
-
-        .kit-item {
-            background-color: #444;
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border: 1px solid #FF4500;
-        }
-
-        .kit-actions {
-            display: flex;
-            gap: 5px;
-        }
-
-        footer {
-            text-align: center;
-            color: #EAEAEA;
-            font-size: 0.8em;
-            margin-top: 40px;
-        }
-
-        .item-image {
-            max-width: 100px;
-            margin: 10px 0;
-        }
-
-        .item-list {
+        .item-container {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 10px;
+            margin: 20px 0;
         }
 
         .item {
-            background-color: #333;
-            border-radius: 5px;
-            padding: 10px;
-            text-align: center;
+            width: 100px;
+            margin: 10px;
             cursor: pointer;
-            transition: transform 0.2s;
         }
 
-        .item:hover {
-            transform: scale(1.05);
+        .inventory {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 10px;
+            margin: 20px 0;
         }
 
-        .item img {
-            max-width: 80px;
-            height: auto;
+        .inventory-area {
+            background-color: #292929;
+            padding: 10px;
+            border: 2px solid #FF4500;
+            border-radius: 10px;
+            min-height: 100px;
+        }
+
+        .item-in-inventory {
+            background-color: #444;
+            border: 1px solid #FF4500;
+            padding: 5px;
+            position: relative;
+        }
+
+        .quantity-input {
+            width: 60px;
+            margin-left: 5px;
+        }
+
+        .command-list {
+            margin-top: 20px;
+            background-color: #292929;
+            padding: 10px;
+            border: 2px solid #FF4500;
+            border-radius: 10px;
+        }
+
+        .slots {
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .slot {
+            background-color: #444;
+            border: 2px dashed #FF4500;
+            height: 60px;
+            position: relative;
         }
     </style>
 </head>
 <body>
     <h1>Kits Generator</h1>
 
-    <label for="kit_name">Kit Name:</label>
-    <input type="text" id="kit_name" placeholder="Enter custom kit name">
-    <select id="kit_name_select" onchange="updateKitName()">
-        <option value="">Select from KaosBot List</option>
+    <label for="kit_name">Enter the kit name:</label>
+    <input type="text" id="kit_name" placeholder="Write the name of the kit" oninput="updateSlots()">
+
+    <label for="kaosbot_kits">Select a KaosBot name:</label>
+    <select id="kaosbot_kits" onchange="updateSlots()">
+        <option value="none">Select a kit name:</option>
         <option value="freekit">freekit</option>
         <option value="freekit2">freekit2</option>
         <option value="vipkit">vipkit</option>
         <option value="elitekit">elitekit</option>
         <option value="elitekit1">elitekit1</option>
         <option value="elitekit2">elitekit2</option>
-        <!-- Add more options as needed -->
+        <option value="elitekit3">elitekit3</option>
         <option value="elitekit44">elitekit44</option>
     </select>
 
@@ -140,150 +139,112 @@
         <option value="electrical">Electrical</option>
     </select>
 
-    <div id="item_list" class="item-list"></div>
+    <div class="item-container" id="item_container"></div>
 
-    <label for="quantity">Quantity:</label>
-    <input type="number" id="quantity" placeholder="Write the amount" min="1" value="1">
+    <div class="slots" id="wear_slots"></div>
+    <div class="slots" id="main_slots"></div>
+    <div class="slots" id="belt_slots"></div>
 
-    <label for="location">Location:</label>
-    <select id="location">
-        <option value="Main">Main</option>
-        <option value="Wear">Wear</option>
-        <option value="Belt">Belt</option>
-    </select>
-
-    <button onclick="generateCommand()">Add to Kit</button>
+    <div class="command-list" id="command_list"></div>
     
-    <div id="kit_list"></div>
-    <div id="command_list"></div>
+    <button onclick="generateCommand()">Generate Kit Command</button>
 
     <script src="Items.js"></script>
     <script>
-        const commands = [];
+        const items = {
+            ammo: [
+                { id: 'ammo1', name: 'Ammo Type 1' },
+                { id: 'ammo2', name: 'Ammo Type 2' },
+            ],
+            weapons: [
+                { id: 'weapon1', name: 'Weapon Type 1' },
+                { id: 'weapon2', name: 'Weapon Type 2' },
+            ],
+        };
 
-        // Function to update item list based on selected category
+        function updateSlots() {
+            const kitName = document.getElementById('kit_name').value || document.getElementById('kaosbot_kits').value;
+            const wearSlots = document.getElementById('wear_slots');
+            const mainSlots = document.getElementById('main_slots');
+            const beltSlots = document.getElementById('belt_slots');
+            wearSlots.innerHTML = '';
+            mainSlots.innerHTML = '';
+            beltSlots.innerHTML = '';
+
+            if (kitName) {
+                for (let i = 0; i < 7; i++) {
+                    wearSlots.innerHTML += `<div class="slot" ondrop="drop(event, 'Wear')" ondragover="allowDrop(event)"></div>`;
+                }
+                for (let i = 0; i < 24; i++) {
+                    mainSlots.innerHTML += `<div class="slot" ondrop="drop(event, 'Main')" ondragover="allowDrop(event)"></div>`;
+                }
+                for (let i = 0; i < 6; i++) {
+                    beltSlots.innerHTML += `<div class="slot" ondrop="drop(event, 'Belt')" ondragover="allowDrop(event)"></div>`;
+                }
+            }
+        }
+
         function updateItemList() {
             const category = document.getElementById('item_category').value;
-            const itemList = document.getElementById('item_list');
-            itemList.innerHTML = ''; // Clear existing items
+            const itemContainer = document.getElementById('item_container');
+            itemContainer.innerHTML = '';
 
             if (category !== 'none') {
                 items[category].forEach(item => {
                     const itemDiv = document.createElement('div');
                     itemDiv.className = 'item';
-                    itemDiv.innerHTML = `
-                        <img src="images/${item.id}.png" alt="${item.name}">
-                        <p>${item.name}</p>
-                    `;
-                    itemDiv.onclick = () => selectItem(item.id);
-                    itemList.appendChild(itemDiv);
+                    itemDiv.draggable = true;
+                    itemDiv.ondragstart = (event) => drag(event, item.id);
+                    itemDiv.innerHTML = `<img src="images/${item.id}.png" alt="${item.name}" width="100"><br>${item.name}`;
+                    itemContainer.appendChild(itemDiv);
                 });
             }
         }
 
-        // Function to select an item
-        function selectItem(itemId) {
-            const itemList = document.getElementById('item_list');
+        function allowDrop(event) {
+            event.preventDefault();
+        }
+
+        function drag(event, itemId) {
+            event.dataTransfer.setData("text/plain", itemId);
+        }
+
+        function drop(event, location) {
+            event.preventDefault();
+            const itemId = event.dataTransfer.getData("text/plain");
             const selectedItem = items[document.getElementById('item_category').value].find(item => item.id === itemId);
 
-            const itemImage = document.createElement('img');
-            itemImage.src = `images/${selectedItem.id}.png`;
-            itemImage.className = 'item-image';
-            itemImage.alt = selectedItem.name;
+            if (selectedItem) {
+                const quantityInput = prompt('Enter quantity:', '1');
 
-            // Show selected item in a fixed area or just use the last image
-            const itemDisplay = document.getElementById('item_image');
-            itemDisplay.src = `images/${selectedItem.id}.png`;
-            itemDisplay.style.display = 'block'; // Show the image
+                if (quantityInput) {
+                    const slotDiv = event.target;
+                    slotDiv.innerHTML = `
+                        ${selectedItem.name} <input type="number" class="quantity-input" value="${quantityInput}" min="1">
+                        <input type="hidden" class="item-id" value="${selectedItem.id}">
+                        <input type="hidden" class="item-location" value="${location}">
+                    `;
+                }
+            }
         }
 
-        // Function to generate command
         function generateCommand() {
-            const kitName = document.getElementById('kit_name').value || document.getElementById('kit_name_select').value;
-            const shortName = document.querySelector('.item-image').alt; // Get the selected item's name
-            const quantity = document.getElementById('quantity').value;
-            const location = document.getElementById('location').value;
+            const kitName = document.getElementById('kit_name').value || document.getElementById('kaosbot_kits').value;
+            const commandListDiv = document.getElementById('command_list');
+            commandListDiv.innerHTML = '';
 
-            if (!kitName || !shortName || !quantity) {
-                alert('Please complete all fields.');
-                return;
-            }
+            const slots = document.querySelectorAll('.slot');
+            slots.forEach(slot => {
+                const itemId = slot.querySelector('.item-id')?.value;
+                const itemLocation = slot.querySelector('.item-location')?.value;
+                const quantity = slot.querySelector('.quantity-input')?.value;
 
-            const command = `Kit add "${kitName}" "${shortName}" ${quantity} 1 "${location}"`;
-            const existingKit = commands.find(kit => kit.name === kitName);
-
-            if (existingKit) {
-                existingKit.commands.push(command);
-            } else {
-                commands.push({
-                    name: kitName,
-                    commands: [command]
-                });
-            }
-
-            localStorage.setItem('commands', JSON.stringify(commands));
-            displayCommands();
-            resetForm(); // Reset form after generating command
-        }
-
-        // Function to display commands
-        function displayCommands() {
-            const commandList = document.getElementById('command_list');
-            commandList.innerHTML = ''; // Clear existing list
-
-            commands.forEach((kit) => {
-                const kitItem = document.createElement('div');
-                kitItem.className = 'kit-item';
-                kitItem.innerHTML = `
-                    <strong>${kit.name}</strong>
-                    <div>
-                        ${kit.commands.join('<br>')}
-                    </div>
-                    <div class="kit-actions">
-                        <button onclick="copyCommands('${kit.name}')">Copy</button>
-                        <button onclick="editKit('${kit.name}')">Edit</button>
-                        <button onclick="deleteKit('${kit.name}')">Delete</button>
-                    </div>
-                `;
-                commandList.appendChild(kitItem);
+                if (itemId && itemLocation && quantity) {
+                    const command = `kit add "${kitName}" "${itemId}" ${quantity} 1 "${itemLocation}"`;
+                    commandListDiv.innerHTML += `<div>${command}</div>`;
+                }
             });
         }
-
-        // Load commands from local storage on page load
-        window.onload = function() {
-            const savedCommands = localStorage.getItem('commands');
-            if (savedCommands) {
-                commands.push(...JSON.parse(savedCommands));
-                displayCommands();
-            }
-        };
-
-        // Function to update kit name based on selection
-        function updateKitName() {
-            const selectedOption = document.getElementById('kit_name_select').value;
-            const customNameInput = document.getElementById('kit_name');
-
-            if (selectedOption === "Custom Name") {
-                customNameInput.style.display = 'block';
-                customNameInput.value = ''; // Clear custom input
-            } else {
-                customNameInput.style.display = 'none';
-                customNameInput.value = selectedOption; // Set to selected value
-            }
-        }
-
-        // Reset the form fields
-        function resetForm() {
-            document.getElementById('kit_name').value = '';
-            document.getElementById('kit_name_select').selectedIndex = 0;
-            document.getElementById('item_category').selectedIndex = 0;
-            document.getElementById('item_list').innerHTML = '';
-            document.getElementById('quantity').value = 1;
-            document.getElementById('location').selectedIndex = 0;
-        }
-
-        // Copy commands and edit/delete functions go here...
-
     </script>
 </body>
 </html>
